Release/v4.4 (#118)
* Mute warnings on Gregem sections. Fixes #112

* Updating Divinum Officium submodule

* Fixing #111 Invalid office on 2021-12-26

* Muting warning on "Munda Cor Passionis" section not found

* Fixing tract in candlemass

* Adding regular endpoint for ordo

* Moving calculation of feria days from UI to the API

* Fixing tables in supplement

* Fixing regex deprecation warnings

* adding license
